add pdf to text script

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "mikehaertl/php-pdftk": "^0.13.0",
         "khanamiryan/qrcode-detector-decoder": "1.0.5.2",
-        "phpoffice/phpspreadsheet": "^1.26"
+        "phpoffice/phpspreadsheet": "^1.26",
+        "thiagoalessio/tesseract_ocr": "^2.12"
     }
 }
