--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "mikehaertl/php-pdftk": "^0.13.0",
         "khanamiryan/qrcode-detector-decoder": "1.0.5.2",
         "phpoffice/phpspreadsheet": "^1.26",
-        "thiagoalessio/tesseract_ocr": "^2.12"
+        "thiagoalessio/tesseract_ocr": "^2.12",
+        "eddturtle/qpdf-php": "^1.0"
     }
 }
